force-app/main/default/objects/Scheme_Mapping__c/Scheme_Mapping__c.object-meta.xml
<CustomObject>
    <label>Scheme Mapping</label>
    <pluralLabel>Scheme Mappings</pluralLabel>
    <nameField>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
        <displayFormat>SM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Maps schemes to specific territories, zones, districts, areas, outlets, and customer types for targeted scheme applicability.</description>
</CustomObject>