force-app/main/default/objects/Scheme_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Outlet</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheme Mappings</relationshipLabel>
    <relationshipName>Scheme_Mappings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>