force-app/main/default/objects/Scheme_Mapping__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Text</type>
    <length>100</length>
</CustomField>