force-app/main/default/objects/Scheme_Mapping__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Super Stockist</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>