force-app/main/default/objects/Scheme_Mapping__c/fields/Sub_Zone__c.field-meta.xml
<CustomField>
    <fullName>Sub_Zone__c</fullName>
    <label>Sub Zone</label>
    <type>Text</type>
    <length>100</length>
</CustomField>