force-app/main/default/objects/Scheme_Mapping__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Text</type>
    <length>100</length>
</CustomField>